--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,400;0,700;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,600;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:wght@400;700&display=swap');
 :root {
   --blue: #0d518c;
   --light-blue: rgb(239, 249, 255);
   --dark-gray: rgb(92, 92, 92);
   --light-gray: rgb(192, 192, 192);
-  --open-sans: 'Open Sans', sans-serif;
-  --inria-serif: 'Inria Serif', serif;
+  --lora-serif: 'Lora', serif;
   --inria-sans: 'Inria Sans', sans-serif;
 }
 html,
@@ -64,25 +62,6 @@ button {
 .display-none {
   display: none;
 }
-.noticiais-home {
-  padding-top: 30px;
-}
-.noticiais-home h3 {
-  font-family: var(--open-sans);
-  background: var(--dark-gray);
-  color: #fff;
-  font-size: 1rem;
-  padding: 3px 20px;
-}
-.site-footer {
-  text-align: center;
-  color: #000;
-  height: auto;
-  padding: 5rem;
-  a {
-    font-weight: 700;
-  }
-}
 .page-404 {
   display: flex;
   justify-content: center;
@@ -91,7 +70,6 @@ button {
   width: 100%;
   height: 100vh;
 }
-
 @media (max-width: 900px) {
   .container {
     max-width: 960px;
