--- a/src/pages/Noticias.scss
+++ b/src/pages/Noticias.scss
@@ -1,5 +1,29 @@
+.Noticias {
+  padding-top: 100px;
+}
 .noticiais-home {
   padding-top: 30px;
+}
+.noticias-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  padding-bottom: 100px;
+}
+.noticias-header h1 {
+  font-family: var(--lora-serif);
+  color: var(--blue);
+  font-size: 3.5rem;
+  font-weight: bolder;
+  padding: 0 0 10px 0;
+}
+.noticias-header p {
+  font-family: var(--inria-sans);
+  color: var(--dark-gray);
+  font-size: 1rem;
+  font-weight: bolder;
+  padding: 0 0 20px 0;
 }
 .noticiais-home h3 {
   font-family: var(--lora-serif);
@@ -18,3 +42,15 @@
   border-bottom: 1px solid var(--dark-gray);
   width: 50px;
 }
+.plus {
+  color: var(--light-gray);
+}
+.plus:hover {
+  color: var(--dark-gray);
+  -webkit-animation: spin 4s linear infinite;
+  -moz-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); }}
