--- a/src/templates/blogTemplate.scss
+++ b/src/templates/blogTemplate.scss
@@ -29,6 +29,10 @@
   font-family: var(--inria-sans);
   color: var(--light-gray);
   font-weight: bolder;
-  font-size: 1.3rem;
+  font-size: 1rem;
   padding-bottom: 30px;
+}
+.voltar a:hover {
+  color: var(--dark-gray);
+  font-style: italic;
 }
