--- a/src/pages/ConhecaMatoGrosso.scss
+++ b/src/pages/ConhecaMatoGrosso.scss
@@ -17,6 +17,7 @@
   font-size: 3.5rem;
   font-weight: bolder;
   padding: 0 0 10px 0;
+  text-align: center;
 }
 .conheca-header p {
   font-family: var(--inria-sans);
@@ -25,4 +26,12 @@
   font-weight: bolder;
   padding: 0 0 20px 0;
   text-align: center;
+}
+@media (max-width: 576px) {
+  .conheca-header h1 {
+    font-size: 2.5rem;
+  }
+  .conheca-header p {
+    font-size: 0.8rem;
+  }
 }
