--- a/src/pages/Historia.scss
+++ b/src/pages/Historia.scss
@@ -34,3 +34,13 @@
   font-size: 1.3rem;
   padding-bottom: 30px;
 }
+@media (max-width: 576px) {
+  .historia-header h1 {
+    font-size: 2.5rem;
+  }
+  .historia-text p {
+    text-indent: 0;
+    font-size: 1rem;
+
+  }
+}
