--- a/src/pages/Homologacoes.scss
+++ b/src/pages/Homologacoes.scss
@@ -26,3 +26,8 @@
   font-size: 1.6rem;
   text-align: center;
 }
+@media (max-width: 576px) {
+  .homologacoes-home p {
+    font-size: 1rem;
+  }
+}
