--- a/src/pages/Noticias.scss
+++ b/src/pages/Noticias.scss
@@ -70,3 +70,11 @@
 .search button:hover {
   opacity: 0.6;
 }
+@media (max-width: 576px) {
+  .noticias-header h1 {
+    font-size: 2.5rem;
+  }
+  .noticias-header p {
+    font-size: 0.8rem;
+  }
+}
