--- a/src/pages/Servicos.scss
+++ b/src/pages/Servicos.scss
@@ -34,3 +34,12 @@
   font-size: 1.3rem;
   padding-bottom: 30px;
 }
+@media (max-width: 576px) {
+  .servicos-header h1 {
+    font-size: 2.5rem;
+  }
+  .servicos-text p {
+    text-indent: 0;
+    font-size: 1rem;
+  }
+}
