--- a/src/templates/blogTemplate.scss
+++ b/src/templates/blogTemplate.scss
@@ -36,3 +36,16 @@
   color: var(--dark-gray);
   font-style: italic;
 }
+@media (max-width: 576px) {
+  .post h1 {
+    text-indent: 0;
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+  }
+  .blog-post-content p:first-child {
+    text-indent: 0;
+  }
+  .blog-post-content p {
+    font-size: 1rem;
+  }
+}
