--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -52,8 +52,6 @@
   display: none;
 }
 .layer {
-  width: 100%;
-  height: 100%;
   background: var(--light-blue);
   z-index: 99;
   width: 10%;
@@ -80,6 +78,24 @@
   font-style: italic;
   font-weight: bolder;
 }
+.header-right-mob {
+  width: 100%;
+  height: 100%;
+}
+.header-right-mob ul {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+.header-right-mob ul li {
+  padding-top: 25px;
+}
+.header-right-mob ul li a {
+  font-family: var(--inria-sans);
+  color: var(--dark-gray);
+  font-size: 1rem;
+}
 
 /* desktop */
 
@@ -94,7 +110,7 @@
     display: flex;
   }
   .menu-button .x {
-    margin-top: 20px;
+    margin-top: 25px;
   }
   .header-right-desk {
     display: none;
@@ -107,5 +123,11 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
+  }
+  .layer {
+    background: var(--light-blue);
+    z-index: 99;
+    width: 40%;
+    height: 100px;
   }
 }
