--- a/src/pages/Noticias.scss
+++ b/src/pages/Noticias.scss
@@ -2,7 +2,7 @@
   padding-top: 100px;
 }
 .noticias-home {
-  padding-top: 30px;
+  padding-top: 70px;
 }
 .noticias-header {
   display: flex;
@@ -70,11 +70,23 @@
 .search button:hover {
   opacity: 0.6;
 }
+.react-search-field {
+  width: 50%;
+}
 @media (max-width: 576px) {
   .noticias-header h1 {
     font-size: 2.5rem;
   }
   .noticias-header p {
     font-size: 0.8rem;
+  }
+  .react-search-field {
+    width: 100%;
+  }
+  .noticias-home h3 {
+    font-size: 1.5rem;
+  }
+  .noticias-home h3::before {
+    display: none;
   }
 }
