--- a/src/components/Carousel.scss
+++ b/src/components/Carousel.scss
@@ -14,6 +14,12 @@
   margin: 10px;
   cursor: grabbing;
 }
+.car-text {
+  font-family: var(--inria-sans);
+  color: var(--dark-gray);
+  font-size: 0.9rem;
+  text-align: center;
+}
 @media (max-width: 1200px) {
   .car-items-wrapper {
     width: 600px;
@@ -31,7 +37,7 @@
 }
 @media (max-width: 440px) {
   .car-items-wrapper {
-    width: 200px;
+    width: 100%;
     height: 300px;
     margin: 0;
   }
