--- a/src/pages/FaleConosco.scss
+++ b/src/pages/FaleConosco.scss
@@ -62,12 +62,12 @@ fieldset {
 }
 .FaleConosco label {
   margin-bottom: 5px;
+  width: 100%;
 }
 .FaleConosco input {
   width: 100%;
   height: 35px;
   border: 1px solid var(--light-gray);
-  margin-bottom: 15px;
   padding: .6em 1.4em .5em .8em;
 }
 .FaleConosco input:focus {
@@ -112,12 +112,18 @@ input[type="message"] {
   box-shadow: 3px 3px 0px -3px rgba(0,0,0,0.75);
   transform: translateY(4px);
 }
+.fale-form span {
+  color: red;
+  font-size: 0.8rem;
+  font-style: italic;
+  padding-left: 10px;
+}
 @media (max-width: 576px) {
   .fale-header h1 {
     font-size: 2.5rem;
   }
   .fale-header p {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
   fieldset {
     padding: 10px;
