--- a/src/pages/FormSucesso.scss
+++ b/src/pages/FormSucesso.scss
@@ -21,6 +21,7 @@
   font-size: 3.5rem;
   font-weight: bolder;
   padding: 0 0 10px 0;
+  text-align: center;
 }
 .form-header p {
   font-family: var(--inria-sans);
