[feat] new links on institucional

--- a/src/pages/Noticias.scss
+++ b/src/pages/Noticias.scss
@@ -73,6 +73,9 @@
 .react-search-field {
   width: 50%;
 }
+.react-hooks-paginator {
+  padding-top: 30px;
+}
 @media (max-width: 576px) {
   .noticias-header h1 {
     font-size: 2.5rem;
