--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-flow: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .header-wrapper-active {
   width: 100%;
@@ -33,7 +33,8 @@
   font-size: 1rem;
   padding-right: 20px;
 }
-.header-right-desk ul li svg {
+.header-right-desk ul li svg,
+.header-right-mob ul li svg {
   position: relative;
   top: 6px;
   left: 2px;
@@ -59,8 +60,8 @@
 .layer {
   background: var(--light-blue);
   z-index: 99;
-  width: 10%;
-  height: 100px;
+  width: 20%;
+  height: auto;
   padding: 15px;
   font-weight: 400;
   font-size: 16px;
@@ -134,6 +135,5 @@
     background: var(--light-blue);
     z-index: 99;
     width: 40%;
-    height: 100px;
   }
 }
