[feat] form validation

--- a/src/pages/Historia.scss
+++ b/src/pages/Historia.scss
@@ -31,7 +31,8 @@
   font-family: var(--lora-serif);
   color: var(--dark-gray);
   font-weight: bolder;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
   padding-bottom: 30px;
 }
 @media (max-width: 576px) {
