--- a/src/components/ConvencoesSection.scss
+++ b/src/components/ConvencoesSection.scss
@@ -20,6 +20,12 @@
       border: 3px solid white;
       text-align: center;
       font-family: var(--lora-serif);
+
+      button {
+        color: white;
+        font-size: 16px;
+        margin-left: 10px;
+      }
     }
 
     td {
